--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
   --sidebar-width: 300px;
 }
 
+.hidden {
+  display: none !important;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -60,6 +64,21 @@ body {
   padding-bottom: 70px;
 }
 
+.section-title {
+  position: relative;
+}
+
+.section-title::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-left: 5px solid var(--skin-color);
+  border-top: 5px solid var(--skin-color);
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -87,6 +106,7 @@ body {
   transform: scale(1.1);
 }
 
+/* darle una vuelta */
 .tear {
   position: absolute;
   right: 0;
@@ -96,26 +116,6 @@ body {
   background-color: var(--skin-color);
   animation: 2s tears infinite;
 }
-/* 
-.tears-lake {
-  position: absolute;
-
-  right: 0;
-  width: 30px;
-  background: var(--skin-color);
-  animation: 20s tearsLake;
-}
-
-@keyframes tearsLake {
-  from {
-    height: 0;
-    top: 200px;
-  }
-  to {
-    height: 50px;
-    top: 150px;
-  }
-} */
 
 @keyframes tears {
   0% {
@@ -123,6 +123,7 @@ body {
   }
   25% {
     top: 150%;
+    right: -2.5px;
   }
   50% {
     top: 125%;
@@ -210,8 +211,138 @@ h3.hello span {
   position: relative;
 }
 
+.home .home-img::before {
+  content: "";
+  position: absolute;
+  top: -35px;
+  left: 30px;
+  height: 70px;
+  width: 70px;
+  border-left: 10px solid var(--skin-color);
+  border-top: 10px solid var(--skin-color);
+}
+
+.home .home-img::after {
+  content: "";
+  position: absolute;
+  bottom: -35px;
+  right: 30px;
+  height: 70px;
+  width: 70px;
+  border-right: 10px solid var(--skin-color);
+  border-bottom: 10px solid var(--skin-color);
+}
+
 .home .home-img img {
   height: 400px;
   border-radius: 5px;
   margin: auto;
+}
+
+/* ABOUT */
+.about {
+  position: relative;
+}
+
+.about .about-text {
+  margin-top: 20px;
+  color: var(--text-black-900);
+  text-align: justify;
+}
+
+.about .about-buttons {
+  margin-top: 20px;
+  /* margin-left:15px; */
+}
+
+.about .about-buttons .btn {
+  margin-left: 15px;
+}
+
+.about .contact-info {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  min-width: 100%;
+  min-height: 100vh;
+  background: rgba(0, 0, 0, 0.25);
+  z-index: 11;
+}
+
+.about .contact-info .container {
+  background: var(--bg-black-900);
+  flex: 0 0 50%;
+}
+
+.about .contact-info .contact-info-header{
+
+}
+
+.about .about-section {
+  margin-top: 30px;
+}
+
+.about .about-section.experience,
+.about .about-section.education {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.about .about-section .timeline-box {
+  margin-top: 20px;
+  padding: 20px 35px;
+}
+
+.about .about-section .timeline-item {
+  position: relative;
+  padding-left: 25px;
+  padding-bottom: 20px;
+}
+
+.about .about-section .timeline-item:last-child {
+  padding-bottom: 0;
+}
+
+.about .about-section .timeline-item::before {
+  content: "";
+  width: 1px;
+  height: 100%;
+  position: absolute;
+  left: 7.5px;
+  background: var(--skin-color);
+}
+
+.about .about-section .timeline-item:last-child::before {
+  content: "";
+  width: 0;
+}
+
+.about .about-section .timeline-item .timeline-content {
+  background: var(--bg-black-100);
+  padding: 15px 25px;
+  border-radius: 10px;
+}
+
+.about .about-section .timeline-item .circle-dot {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  left: 0;
+  border-radius: 50%;
+  background: var(--skin-color);
+}
+
+.about .about-section .timeline-item .timeline-date {
+  font-size: 12px;
+}
+
+.about .about-section .timeline-item .timeline-date .fa {
+  margin-right: 5px;
+}
+
+.about .about-section .timeline-item .timeline-description {
+  font-size: 13px;
+  color: var(--text-black-700);
+  text-align: justify;
 }
