--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,24 @@
   --text-black-700: #504e70;
 
   --sidebar-width: 300px;
+  --box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 .hidden {
   display: none !important;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body.dark {
+  --bg-black-900: #151515;
+  --bg-black-100: #222222;
+  --bg-black-50: #393939;
+  --text-black-900: #ffffff;
+  --text-black-700: #e9e9e9;
+  --box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
 }
 
 body {
@@ -34,6 +48,40 @@ body {
 ::before,
 ::after {
   box-sizing: border-box;
+}
+
+input {
+  border: none;
+  outline: none;
+  background: var(--bg-black-100);
+  line-height: 35px;
+  font-size: 20px;
+  color: var(--text-black-900);
+  padding-left: 10px;
+  border-radius: 5px;
+  box-shadow: var(--box-shadow);
+}
+
+input:focus {
+  outline: none;
+  border-bottom: 1px solid var(--skin-color);
+}
+
+textarea {
+  border: none;
+  outline: none;
+  background: var(--bg-black-100);
+  line-height: 35px;
+  font-size: 20px;
+  color: var(--text-black-900);
+  padding-left: 10px;
+  border-radius: 5px;
+  box-shadow: var(--box-shadow);
+}
+
+textarea:focus {
+  outline: none;
+  border-bottom: 1px solid var(--skin-color);
 }
 
 .section {
@@ -66,6 +114,7 @@ body {
 
 .section-title {
   position: relative;
+  color: var(--text-black-700);
 }
 
 .section-title::before {
@@ -144,6 +193,79 @@ body {
 }
 
 /* ASIDE */
+.sidebar-toggler {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  transition: all 0.3s ease;
+  border-radius: 4px;
+  border: 1px solid var(--text-black-700);
+  background-color: var(--bg-black-100);
+}
+
+.sidebar-toggler .toggle-sidebar {
+  width: 60%;
+  height: 2px;
+  background-color: var(--text-black-700);
+  border-radius: 2px;
+  transition: all 1s ease;
+}
+
+.sidebar-toggler .toggle-sidebar::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  width: 60%;
+  height: 2px;
+  background-color: var(--text-black-700);
+  border-radius: 2px;
+  transition: all 1s ease;
+}
+
+.sidebar-toggler .toggle-sidebar::after {
+  content: "";
+  position: absolute;
+  bottom: 12px;
+  width: 60%;
+  height: 2px;
+  background-color: var(--text-black-700);
+  border-radius: 2px;
+  transition: all 1s ease;
+}
+
+.sidebar-toggler .toggle-sidebar.close {
+  width: 60%;
+  height: 2px;
+  background-color: var(--text-black-700);
+  border-radius: 2px;
+  transform: rotate(45deg);
+  transition: all 1s ease;
+}
+
+.sidebar-toggler .toggle-sidebar.close::before {
+  content: "";
+  width: 0;
+  transition: all 1s ease;
+}
+
+.sidebar-toggler .toggle-sidebar.close::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--text-black-700);
+  border-radius: 2px;
+  transform: rotate(90deg);
+  transition: all 1s ease;
+}
+
 .aside {
   position: fixed;
   top: 0;
@@ -153,7 +275,7 @@ body {
   align-items: center;
   width: var(--sidebar-width);
   min-height: 100vh;
-  background: var(--bg-black-700);
+  background: var(--bg-black-100);
   border-right: 1px solid var(--bg-black-50);
   z-index: 10;
 }
@@ -261,7 +383,7 @@ h3.hello span {
 }
 
 .about .about-buttons .btn {
-  margin-left: 15px;
+  margin: 15px;
 }
 
 .about .contact-info {
@@ -285,7 +407,7 @@ h3.hello span {
   margin: auto;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--box-shadow);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -304,20 +426,9 @@ h3.hello span {
   justify-content: space-between;
 }
 
-/* .about .contact-info .contact-info-header {
-  flex: 1;
-}
-
-.contact-info-body {
-  flex: 3;
-}
-
-.contact-info-buttons {
-  flex: 1;
-} */
-
 .about .about-section {
   margin-top: 30px;
+  color: var(--text-black-700);
 }
 
 .about .about-section.experience,
@@ -335,6 +446,7 @@ h3.hello span {
   position: relative;
   padding-left: 25px;
   padding-bottom: 20px;
+  color: var(--text-black-700);
 }
 
 .about .about-section .timeline-item:last-child {
@@ -359,6 +471,7 @@ h3.hello span {
   background: var(--bg-black-100);
   padding: 15px 25px;
   border-radius: 10px;
+  box-shadow: var(--box-shadow);
 }
 
 .about .about-section .timeline-item .circle-dot {
@@ -380,18 +493,15 @@ h3.hello span {
 
 .about .about-section .timeline-item .timeline-description {
   font-size: 13px;
-  color: var(--text-black-700);
   text-align: justify;
 }
 
 /* PROJECTS */
 
-
 .projects-container {
   margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .projects-container .project-item {
@@ -401,7 +511,7 @@ h3.hello span {
   border-left: 1px solid var(--skin-color);
   border-top: 1px solid var(--skin-color);
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--box-shadow);
   margin: 20px;
   padding: 10px 20px;
   cursor: pointer;
@@ -454,12 +564,11 @@ h3.hello span {
   position: relative;
   background-color: var(--bg-black-100);
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--box-shadow);
   margin: 20px;
   padding: 30px 40px;
   flex: 0 0 50%;
   max-width: 50%;
-  height: 300px;
 }
 
 .certification-container .certification-item {
@@ -468,6 +577,7 @@ h3.hello span {
   justify-content: space-between;
   height: 100%;
   text-align: center;
+  color: var(--text-black-900);
 }
 
 .certification-container .certification-item .certification-item-img {
@@ -475,6 +585,7 @@ h3.hello span {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 30px;
 }
 
 .certification-container .certification-item .certification-item-img img {
@@ -485,4 +596,109 @@ h3.hello span {
   position: absolute;
   top: 10px;
   right: 10px;
+}
+
+/* CONTACT */
+/* .contact-container {
+  margin-top: 30px;
+  display: flex;
+  width: 100%;
+} */
+
+.contact-form {
+  position: relative;
+  flex: 0 0 70%;
+  max-width: 70%;
+  padding: 20px;
+  color: var(--text-black-900);
+}
+
+.contact-form label {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-bottom: 15px;
+}
+
+.contact-buttons {
+  flex: 0 0 30%;
+  max-width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.contact-buttons .contact-link {
+  color: var(--text-black-900);
+  margin-bottom: 30px;
+  text-decoration: none;
+  display: flex;
+}
+.contact-buttons .contact-link i {
+  margin-right: 15px;
+  font-size: 30px;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 1385px) {
+  .sidebar-toggler {
+    display: flex;
+  }
+  .aside {
+    left: -100%;
+    transition: all 1s ease;
+  }
+  .aside.active {
+    left: 0;
+    z-index: 200;
+    width: 100%;
+    /* transition: all 2s ease; */
+  }
+  .main-content {
+    padding-left: 0;
+  }
+}
+
+@media (max-width: 1072px) {
+  .home .home-img {
+    display: none;
+  }
+  .home .home-info {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .certifications-container {
+    flex-wrap: wrap;
+  }
+  .certification-container {
+    flex: 0 0 80%;
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 790px) {
+  .about .about-section.experience,
+  .about .about-section.education {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .contact-form {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .contact-buttons {
+    flex: 0 0 100%;
+    max-width: 100%;
+    flex-direction: row;
+  }
+
+  .contact-buttons .contact-link span {
+    display: none;
+    margin-bottom: 0;
+  }
 }
